Fixing active indicator on header navigation by adding pixel to spacing. #1416
Conflicts:
	src/html/assets/themes/fabrizio1.0/config/settings.ini

--- a/src/html/assets/themes/fabrizio1.0/stylesheets/less/components/header.less
+++ b/src/html/assets/themes/fabrizio1.0/stylesheets/less/components/header.less
@@ -256,7 +256,7 @@ body.trovebox {
       border-bottom: 5px solid @color_banner_secondary;
       border-left: 7px solid transparent;
       border-right: 7px solid transparent;
-      bottom: -12px;
+      bottom: -13px;
     }
     
     .logo.active-page-item:after {
